--- a/foodie-frontend/src/app/app.component.css
+++ b/foodie-frontend/src/app/app.component.css
@@ -3,19 +3,27 @@ nav {
     padding: 0px;
 }
 
-nav > a {
-padding: 0px;
+nav>a {
+    padding: 0px;
 }
 
 #logo-img {
     max-width: 65px;
     margin-left: 20px;
-    margin-bottom: -8px;
 }
 
 .rounded-circle {
-    width: 50px;
+    height: 50px;
     margin-right: 10px;
     cursor: pointer;
-    margin-bottom: -8px;
+}
+
+.dropdown-item {
+    cursor: pointer;
+}
+
+.user {
+    margin-top: 14px;
+    margin-bottom: 0px;
+    color: white !important;
 }
