--- a/foodie-frontend/src/app/app.component.html
+++ b/foodie-frontend/src/app/app.component.html
@@ -1,24 +1,30 @@
 <!-- nav -->
 <nav class="navbar navbar-expand-lg navbar-dark static-top">
-  <a class="navbar-brand" rel="home" href="/home">
-    <img id="logo-img" src="/assets/img/logo.png">
-  </a>
-  <ul class="navbar-nav ml-auto nav-flex-icons">
-    <li class="nav-item avatar dropdown">
-      <a class="nav-link" id="navbarDropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" class="rounded-circle z-depth-0"
-          alt="avatar image">
-      </a>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenu">
-        <a class="dropdown-item" href="/profile">My profile</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="/logout">
-          <fa-icon [icon]="faSignOut"></fa-icon> Logout
-        </a>
-      </div>
-    </li>
-  </ul>
+    <a class="navbar-brand" rel="home" href="/home">
+        <img id="logo-img" src="/assets/img/logo.png">
+    </a>
+    <ul *ngIf="currentUser" class="navbar-nav ml-auto nav-flex-icons">
+        <li class="nav-item">
+            <a class="nav-link user">
+                {{currentUser.firstName}} {{currentUser.lastName}}
+            </a>
+        </li>
+        <li class="nav-item avatar dropdown">
+            <a class="nav-link" id="navbarDropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <img [src]="currentUser.imageUrl != null ? currentUser.imageUrl : defaultImage" class="rounded-circle z-depth-0" alt="avatar image">
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenu">
+                <a class="dropdown-item" href="/profile">
+                    <fa-icon [icon]=" faProfile"></fa-icon> My profile
+                </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" (click)="logout()">
+                    <fa-icon [icon]=" faSignOut "></fa-icon> Logout
+                </a>
+            </div>
+        </li>
+    </ul>
 </nav>
 
 <!-- main app container -->
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
