--- a/auth-server/src/main/resources/templates/APIs.html
+++ b/auth-server/src/main/resources/templates/APIs.html
@@ -16,7 +16,7 @@
 				$.ajax({
 					type : "POST",
 					data : $("form").serialize(),
-					url : "/uaa/create-client",
+					url : "/auth/create-client",
 					statusCode : {
 						201 : function(data) {
 							$('#client-regitration-modal').modal('show');
