--- a/auth-server/src/main/resources/templates/credentials.html
+++ b/auth-server/src/main/resources/templates/credentials.html
@@ -6,46 +6,12 @@
 	<nav th:replace="fragments/head :: navbar"></nav>
 	<div th:replace="fragments/head :: sidebar(credentials)"></div>
 	<div class="container">
-		<p>Here you can register a new client application which will use
-			My API.</p>
+		<p>Here are the credentials for client applications you have
+			created.</p>
+		<div class="row">
+			<div class="col-12" th:each="client: ${clients}">One of three
+				columns</div>
+		</div>
 	</div>
-
-	<script>
-		$(document).ready(function() {
-			$("form").submit(function(e) {
-				e.preventDefault();
-				$.ajax({
-					type : "POST",
-					data : $("form").serialize(),
-					url : "/uaa/create-client",
-					statusCode : {
-						201 : function(data) {
-							$('#client-regitration-modal').modal('show');
-							$('.modal-table').show();
-							$('#client-id').append(data.clientId);
-							$('#client-secret').append(data.clientSecret);
-						}
-					},
-					error : function(jqxhr, textStatus, errThrown) {
-						console.log(textStatus);
-						console.log(errThrown);
-					}
-				});
-			});
-
-			$("#copy-client-id").click(function() {
-				var copyClientId = $("#client-id");
-				copyClientId.select();
-				document.execCommand("copy");
-			});
-
-			$("#copy-client-secret").click(function() {
-				var copyClientSecret = $("#client-secret");
-				copyClientSecret.select();
-				document.execCommand("copy");
-			});
-		});
-	</script>
-
 </body>
 </html>
