--- a/auth-server/src/main/resources/templates/credentials.html
+++ b/auth-server/src/main/resources/templates/credentials.html
@@ -1,4 +1,5 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <div th:replace="fragments/head :: css-js"></div>
 </head>
@@ -8,10 +9,23 @@
 	<div class="container">
 		<p>Here are the credentials for client applications you have
 			created.</p>
-		<div class="row">
-			<div class="col-12" th:each="client: ${clients}">One of three
-				columns</div>
-		</div>
+
+		<table class="table">
+			<thead class="thead-light">
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">Client name</th>
+					<th scope="col">Client ID</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="client,iterationStatus: ${clients}">
+					<th scope="row" th:text="${iterationStatus.count}"></th>
+					<td th:text="${client.clientName}"></td>
+					<td th:text="${client.clientId}"></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 </body>
 </html>
