--- a/auth-server/src/main/resources/static/css/style.css
+++ b/auth-server/src/main/resources/static/css/style.css
@@ -83,8 +83,7 @@
 }
 
 #logo-img {
-	width: 50px;
-	height: 50px;
+	max-width: 60px;
 	margin-right: 15px;
 }
 
@@ -173,4 +172,20 @@ a #navbar-right.nav-link.dropdown-toggle::after {
 
 #login-error.alert {
 	margin-bottom: 0px;
+}
+
+thead th {
+	background-color: #f6f9fb !important;
+}
+
+.get-method {
+	background-color: #b3d1ff;
+}
+
+.post-method {
+	background-color: #99ff99;
+}
+
+.navbar-right {
+	margin-left: 1140px;
 }
