--- a/auth-server/src/main/resources/templates/fragments/head.html
+++ b/auth-server/src/main/resources/templates/fragments/head.html
@@ -17,10 +17,10 @@
 
 	<div th:fragment="navbar" th:remove="tag">
 		<nav class="navbar navbar-expand-sm bg-info navbar-dark sticky-top">
-			<img id="logo-img" src='../static/img/logo.png'
-				th:src='@{/img/logo.png}' /> <a class="navbar-brand" href="#">My
-				authorization server</a>
-			<div sec:authorize="isAuthenticated()">
+			<img id="logo-img" src='../static/img/my-service-logo.png'
+				th:src='@{/img/my-service-logo.png}' /> <a class="navbar-brand"
+				href="#">Authorization server</a>
+			<div class="navbar-right" sec:authorize="isAuthenticated()">
 				<ul class="navbar-nav ml-auto nav-flex-icons">
 					<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" id="navbar-right"
@@ -32,7 +32,7 @@
 							<form class="dropdown-item" th:action="@{/logout}" method="post">
 								<input type="hidden" th:name="${_csrf.parameterName}"
 									th:value="${_csrf.token}" /><input
-									class="btn btn-info btn-block" type="submit" value="Sign out" />
+									class="btn btn-light btn-block" type="submit" value="Sign out" />
 							</form>
 						</div></li>
 				</ul>
@@ -51,7 +51,7 @@
 						registration
 				</a></li>
 				<li th:class="${active == 'APIs'}? 'active' : null"><a
-					href="user"><i class="fas fa-bars"></i> APIs </a></li>
+					href="apis"><i class="fas fa-bars"></i> APIs </a></li>
 			</ul>
 		</div>
 	</div>
